# PAOOO_Project

./: CMakeLists.txt  README.md
include/: ParkingArea.h  ParkingSpot.h
src/: ParkingSpot.cpp  main.cpp
